--- a/adda_da3/Jenkinsfile
+++ b/adda_da3/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage('Build') {
             steps {
-                bat 'start mvn clean package'
+                 bat 'echo "Building"'
             }
 }
 }
